# RPO_Khafizov_IU3-63B

./: README.md
fclient/app/: build.gradle.kts
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.java
fclient/app/src/main/nativeLibs/x86_64/: cmake_install.cmake
fclient/gradle/wrapper/: gradle-wrapper.properties
